[package]
name = "handlers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.78" }
async-trait = "0.1.52"
futures = "0.3.19"
route-recognizer = "0.2"
local-ip-address = "0.4.4"
bytes = "1.1.0"
